--- a/public/css/general.css
+++ b/public/css/general.css
@@ -45,7 +45,7 @@ a {
 	color: inherit;
 }
 .text-black a:hover{
-	border-bottom: 1px dotted #ea5644;;
+	border-bottom: 1px dotted #ea5644;
 }
 .height-100{
 	min-height: 100vh;
@@ -187,9 +187,9 @@ a {
 .sec-div ul{
 	list-style-type: none;
 }
-.sec-div ul li a:link, ul li a:visited{
+/*.sec-div ul li a:link, ul li a:visited{
 	color: #05F2FF;
-}
+}*/
 .sec-div ul li a:hover{
 	text-decoration: underline;
 }
