--- a/public/css/page.css
+++ b/public/css/page.css
@@ -745,3 +745,41 @@ button.toggle-button{
     left: 100%;
     margin-left: 15px;
 }
+
+/*Main page styles*/
+.main{
+  font-size: 14px;
+  line-height: 24px;
+}
+.main h1{
+  font-family: "Lato", Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 40px;
+  font-weight: 300;
+  line-height: 50px;
+  border-bottom: 1px solid #e5ae47;
+  margin-bottom: 30px;
+}
+.main h2{
+  font-family: "Lato", Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 50px;
+  margin-top: 35px;
+  margin-bottom: 15px;
+}
+.sidebar{
+  padding: 30px 0 0 30px;
+}
+.sidebar h1{
+  color: #3F51B5;
+  font-family: "Lato", Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 50px;
+}
+.sidebar li{
+  margin-bottom: 10px;
+}
+.sidebar li a{
+  color: #3F51B5;
+}
