--- a/public/css/page.css
+++ b/public/css/page.css
@@ -691,16 +691,6 @@ button.toggle-button{
   display:none;
 }
 
-.talk{
-  font-style: italic;
-  font-size: 1.5em;
-}
-.abstract{
-  color: #000;
-  font-weight: bold;
-}
-
-
 /*Home page styles*/
 .logos{
   text-align: right;
@@ -713,7 +703,7 @@ button.toggle-button{
   width: 80%;
   font-size: 16px;
   line-height: 32px;
-  margin: 50px 0 50px 20px;
+  margin: 50px 0 0px 20px;
 }
 
 /*side lines*/
@@ -766,6 +756,28 @@ button.toggle-button{
   line-height: 50px;
   margin-top: 35px;
   margin-bottom: 15px;
+}
+.main .affiliation{
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 24px;
+  margin-bottom: 30px;
+}
+.main .talk .type{
+  font-size: 14px;
+  font-weight: 400;
+  margin-top: 35px;
+  color: #e5ae47;
+  font-style: italic;
+}
+.main .talk .title{
+  font-size: 16px;
+  font-weight: 700;
+  margin-top: 5px;
+}
+.main .profile-thumb{
+  float: right;
+  width: 180px;
 }
 .sidebar{
   padding: 30px 0 0 30px;
