--- a/public/css/page.css
+++ b/public/css/page.css
@@ -839,6 +839,8 @@ button.toggle-button{
 .main .profile-thumb{
   float: right;
   width: 180px;
+  margin-left: 50px;
+  margin-bottom: 50px;
 }
 .sidebar{
   padding: 30px 0 0 30px;
