--- a/public/css/page.css
+++ b/public/css/page.css
@@ -842,6 +842,9 @@ button.toggle-button{
   margin-left: 50px;
   margin-bottom: 50px;
 }
+.main .general-list li{
+  margin-bottom: 10px;
+}
 .sidebar{
   padding: 30px 0 0 30px;
 }
