linked presentations in speakers page

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -876,3 +876,7 @@ button.toggle-button{
     font-weight: 300;
     line-height: 50px;
  }
+ .presentation{
+  float: right;
+  font-size: 0.8em;
+ }
